@@ -8369,4 +8369,5 @@ EPRINTS-3.1-beta-2
 2009-09-16 tdb
  * Fixed current_counter not being available to Oracle
  * Fixed erroneous attempt to set increment=0 in counter_minimum
+ * Modified Import UI to allow a per-plugin/single/bulk workflow
 
